Final touches and project cleanup